--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <!-- Polyfills for older browsers -->
-    <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-    <script src="https://unpkg.com/zone.js@0.7.4?main=browser"></script>
-    <script src="https://unpkg.com/reflect-metadata@0.1.8"></script>
-    <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
 
     <!-- For application -->
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
@@ -20,9 +15,12 @@
     <script src="static/jquery/jquery.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
 
-    <!-- <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" /> -->
-
-    <script src="https://cdn.rawgit.com/angular/angular.io/b3c65a9/public/docs/_examples/_boilerplate/systemjs.config.web.js"></script>
+    <!-- Polyfills for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="static/js/systemjs.config.js"></script>
     <script>
         System.import('app').catch(function (err) {
             console.error(err);
