--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-
+    
+    <link rel="stylesheet" href="css/themes/omega/theme.css" />
+    <link rel="stylesheet" href="css/primeng.min.css" />
     <link rel="stylesheet" href="css/style.css">
 
     <base href="/">
