--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     
-    <link rel="stylesheet" href="css/themes/omega/theme.css" />
-    <link rel="stylesheet" href="css/primeng.min.css" />
+    <link rel="stylesheet" href="fonts/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/resources/primeng.min.css" />
+    <link rel="stylesheet" href="css/resources/themes/omega/theme.css" />
     <link rel="stylesheet" href="css/style.css">
 
     <base href="/">
