--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="css/resources/primeng.min.css" />
     <link rel="stylesheet" href="css/resources/themes/omega/theme.css" />
     <link rel="stylesheet" href="css/style.css">
-
+    
+    <script src= "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js" charset="utf-8"></script>
+    
     <base href="/">
 </head>
 
