ajuste de dependencias de chart

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/resources/themes/omega/theme.css" />
     <link rel="stylesheet" href="css/style.css">
     
-    <script src= "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js" charset="utf-8"></script>
+    <script src= "chart.js" charset="utf-8"></script>
     
     <base href="/">
 </head>
