Máscara de progreso en zona de avales

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/resources/primeng.min.css" />
     <link rel="stylesheet" href="css/resources/themes/omega/theme.css" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/busy.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
 
     <script src="chart.js" charset="utf-8"></script>
